--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -67,11 +67,18 @@ on:
   push:
     branches:
       - main
+      - master
   pull_request:
     types: [opened, reopened, synchronize]
 
+permissions:
+  contents: read
+
 jobs:
   update_release_draft:
+    permissions:
+      contents: write
+      pull-requests: write
     runs-on: ubuntu-latest
     steps:
       - uses: release-drafter/release-drafter@v5
