--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,56 +1,60 @@
+name-template: 'v$RESOLVED_VERSION'
+tag-template: 'v$RESOLVED_VERSION'
+categories:
+  - title: '🚀 Features'
+    labels:
+      - 'feature'
+      - 'enhancement'
+  - title: '🐛 Bug Fixes'
+    labels:
+      - 'fix'
+      - 'bugfix'
+      - 'bug'
+  - title: '📚 Documentation'
+    labels:
+      - 'documentation'
+      - 'docs'
+  - title: '♻️ Refactoring'
+    labels:
+      - 'refactor'
+      - 'refactoring'
+  - title: '⚡ Performance Improvements'
+    labels:
+      - 'performance'
+  - title: '🧪 Tests'
+    labels:
+      - 'test'
+      - 'tests'
+  - title: '🧰 Maintenance'
+    labels:
+      - 'chore'
+      - 'maintenance'
+      - 'dependencies'
+  - title: '🏗️ Build System'
+    labels:
+      - 'build'
+      - 'ci'
+      - 'cd'
+
+exclude-labels:
+  - 'skip-changelog'
+
+change-template: '- $TITLE @$AUTHOR (#$NUMBER)'
+change-title-escapes: '\<*_&' # You can add # and @ to disable mentions, and add ` to disable code blocks.
+version-resolver:
+  major:
+    labels:
+      - 'major'
+  minor:
+    labels:
+      - 'minor'
+  patch:
+    labels:
+      - 'patch'
+  default: patch
 template: |
   ## What's Changed
 
-  {% for category in categories %}
-  ### {{ category.title }}
-  {% for commit in category.commits %}
-  - **{{ commit.commit.message | firstLine }}** ([{{ commit.sha | truncate(7, "" ) }}]({{ commit.html_url }})) by @{{ commit.author.login }}
-  {% endfor %}
-  {% endfor %}
+  $CHANGES
 
-  {% if contributors.size > 0 %}
-  ## Contributors
-
-  {% for contributor in contributors %}
-  - [@{{ contributor.login }}]({{ contributor.html_url }})
-  {% endfor %}
-  {% endif %}
-
-categories:
-  - title: "🚀 Features"
-    labels:
-      - "feature"
-      - "enhancement"
-  - title: "🐛 Bug Fixes"
-    labels:
-      - "fix"
-      - "bugfix"
-      - "bug"
-  - title: "📚 Documentation"
-    labels:
-      - "documentation"
-      - "docs"
-  - title: "♻️ Refactoring"
-    labels:
-      - "refactor"
-      - "refactoring"
-  - title: "⚡ Performance Improvements"
-    labels:
-      - "performance"
-  - title: "🧪 Tests"
-    labels:
-      - "test"
-      - "tests"
-  - title: "🧰 Maintenance"
-    labels:
-      - "chore"
-      - "maintenance"
-      - "dependencies"
-  - title: "🏗️ Build System"
-    labels:
-      - "build"
-      - "ci"
-      - "cd"
-
-exclude-labels:
-  - "skip-changelog"
+  $CONTRIBUTORS
